<resources>
	<string name="app_name">ZJU-Android-2019</string>
	<string name="ex1">ch3ex1</string>
	<string name="ex2">ch3ex2</string>
	<string name="duration_hint">动画时长，单位毫秒，范围在 100 ~ 10000</string>
	<string name="invalid_duration">时长设置不合理，请输入范围在 100 ~ 10000 的值</string>
	<string name="rainbow_text">^_^ 彩虹字体 ^_^ La La La ~</string>
	<string name="ex3">ch3ex3</string>

	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="priority_low">priority_low</string>
	<string name="priority_medium">priority_medium</string>
	<string name="priority_high">priority_high</string>
	<string name="confirm">confirm</string>
	<string name="action_settings">settings</string>
	<string name="action_debug">debug</string>

	<string name="media_play">播放</string>
	<string name="pause">暂停</string>
	<string name="stop">停止</string>
	<string name="setting">设置</string>
	<string name="back">返回</string>
	<string name="fullScreek">全屏</string>
	<string name="smallScreen">小屏</string>
	<string name="volume">音量</string>
</resources>
